<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">re:publica 13</string>

    <!-- action bar -->
    <string name="menu_favorites">Favorites</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_testing">Testing</string>
    <string name="menu_update">Update</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_share">Share</string>

    <!-- main view -->
    <string name="main_monday">Mon</string>
    <string name="main_tuesday">Tues</string>
    <string name="main_wednesday">Wed</string>
    <string name="main_rooms">Rooms</string>
    <string name="main_speakers">Speakers</string>
    <string name="main_favorites">Favorites</string>
    <string name="main_search">Search</string>

    <string name="search_label">Search</string>
    <string name="settings_description">re:publica search</string>
    <string name="menu_test_display_event">Display event</string>
    <string name="menu_prefetch_rooms">Prefetch Maps</string>
    <string name="synchronize_button">Synchronize</string>
    <string name="synchronize_title">Synchronize</string>
    <string name="synchronize_description">Synchronizes the schedule with the one from re:publica online.\n\nYou need a connection to the Internet for this to work.</string>
    <string name="db_ver">Database last updated:</string>
    <string name="about_text1">re:publica 13 Schedule App</string>
    <string name="about_text2">Programmed by:\nMichaël Uyttersprot, Pieter Iserbyt and Christophe Vandeplas. Contributors: Christopher Orr, Raphael Kallensee, Chris Kühl.</string>
    <string name="about_text4">Adapted for re:publica by &lt;a href="http://endocode.com" target="_blank"&gt;endocode AG&lt;/a&gt;</string>
    <string name="about_text3">Licensed under GPL. Source available at https://github.com/blixtra/re-publica-android. re:publica logo and artwork property of republica GmbH, all rights reserved. All other artwork licensed under a CC-BY-SA 2.0 Belgium License.</string>
    <string name="favorites">Favorites</string>
    <string name="favorites_event_removed">Event removed from favorites</string>
    <string name="favorites_event_added">Event added to favorites</string>
    <string name="share">Share...</string>
    <string name="updater_title">What do you want to update?</string>
    <string-array name="updater_dialog_choices">
        <item name="updater_dialog_choices_xml">Update schedule contents</item>
        <!-- <item name="updater_dialog_choices_rooms">Preload room images</item> -->
    </string-array>

    <!-- event list -->
    <string name="eventlist_header_monday">Monday (Day 1)</string>
    <string name="eventlist_header_tuesday">Tuesday (Day 2)</string>
    <string name="eventlist_header_wednesday">Wednesday (Day 3)</string>

    <!-- settings -->
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_notifications_title">Enable notifications</string>
    <string name="settings_notifications_summary">If checked, this will notify you of upcoming events you favorited</string>
    <string name="settings_vibrate_title">Vibrate</string>
    <string name="settings_vibrate_summary">Vibrate on notifications</string>
    <string name="settings_led_title">Flash led</string>
    <string name="settings_led_summary">Blink led on notification</string>
    <string name="settings_notificationtime_title">Notification time (minutes)</string>
    <string name="settings_notificationtime_summary">Delay before getting notified of an upcoming favorite event</string>
    <string name="settings_category_favorites">Favorites</string>
    <string name="settings_favupcoming_title">Only show upcoming</string>
    <string name="settings_favupcoming_summary">If checked, this will ony show the upcoming favorites in the list</string>
</resources>
