<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/republica_bg"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/button_scroll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/button_wrap"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp">

                <ImageView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:src="@drawable/republica_banner"
					android:scaleType="fitCenter"
					android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:id="@+id/btn_box"
                    android:layout_width="fill_parent"
                    android:orientation="horizontal">

                    <Button
                        style="@style/day_button"
                        android:id="@+id/btn_day_1"
                        android:drawableStart="@drawable/content_event"
                        android:text="@string/main_monday"
                        android:layout_marginBottom="10dp"/>

                    <Button
                        style="@style/day_button"
                        android:id="@+id/btn_day_2"
                        android:drawableStart="@drawable/content_event"
                        android:text="@string/main_tuesday"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp" />

                    <Button
                        style="@style/day_button"
                        android:id="@+id/btn_day_3"
                        android:drawableStart="@drawable/content_event"
                        android:text="@string/main_wednesday" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_box_middle"
                    android:layout_width="fill_parent"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:weightSum="2">
                    <Button
                        style="@style/day_button"
                        android:id="@+id/btn_rooms"
                        android:text="@string/main_rooms"
                        android:layout_marginRight="10dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                    <Button
                        style="@style/day_button"
                        android:id="@+id/btn_speakers"
                        android:text="@string/main_speakers"
                        android:layout_width="0dp"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_box_two"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <Button
                        style="@style/main_button"
                        android:id="@+id/btn_favorites"
                        android:drawableStart="@drawable/rating_important"
                        android:text="@string/main_favorites"
                        android:layout_marginBottom="10dp"/>
                    <Button
                        style="@style/main_button"
                        android:id="@+id/btn_search"
                        android:drawableStart="@drawable/action_search"
                        android:text="@string/main_search" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/status_box"
            android:layout_below="@id/button_scroll"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:gravity="bottom">
            <LinearLayout
                android:layout_width="fill_parent"
                android:alpha="0.7"
                android:background="#ffffff"
                android:padding="5dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/progress"
                    android:visibility="gone" />
                <TextView
                    android:id="@+id/db_ver"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
